k8s/experements/app/deploy-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1
spec:
  replicas: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      pod: app-v1
  # Pod
  template:
    metadata:
      labels:
        pod: app-v1
    spec:
      terminationGracePeriodSeconds: 2
      volumes:
        - name: nginx-config-classmap-volume
          configMap:
            name: nginx-config-classmap
        - name: pod-containers-volume
          emptyDir:
            # tmpfs
            medium: Memory
      containers:
        - name: app-container
          # cd ~/MY/project/k8s/app_nginx
          # du --build --remove-orphans && docker tag app_nginx-app_nginx:latest local_nginx:1.28-alpine-perl
          # minikube image rm local_nginx:1.28-alpine-perl && minikube image load local_nginx:1.28-alpine-perl
          image: 'grinway/local_nginx:1.28-alpine-perl'
          volumeMounts:
            - name: nginx-config-classmap-volume
              mountPath: '/etc/nginx/conf.d/'
            - name: pod-containers-volume
              mountPath: '/usr/share/nginx/html/'
          ports:
            - containerPort: 8181
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            runAsNonRoot: true
            runAsUser: 65534
            runAsGroup: 65534
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: '20m'
              memory: '20Mi'
