k8s/experements/app/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    pod: app-v1
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8181
